--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
       <artifactId>jakarta.servlet.jsp.jstl</artifactId>
       <version>1.2.6</version>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20220924</version>
+    </dependency>
+
 
 
 
